log
  File "psubutton.py", line 57
    if __name__ = "__main__":
                ^
SyntaxError: invalid syntax
